Move demo/libfm-file-search-cli-demo.c into src/tests/ where it should be.
Since the libfm-file-search-cli-demo is really a test for file search
function (and that is stated in sources) it should be not in src/demo/

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -317,7 +317,7 @@ libfm_pref_apps_LDADD = \
 
 
 if ENABLE_DEMO
-bin_PROGRAMS += libfm-demo libfm-file-search-cli-demo
+bin_PROGRAMS += libfm-demo
 libfm_demo_SOURCES = \
 	$(gtk_compat_SOURCES) \
 	demo/libfm-demo.c \
@@ -339,22 +339,6 @@ libfm_demo_LDADD = \
 	$(INTLLIBS) \
 	libfm.la \
 	@LIBFM_GTK_LTLIBRARIES@ \
-	$(NULL)
-
-libfm_file_search_cli_demo_SOURCES = \
-	demo/libfm-file-search-cli-demo.c \
-	$(NULL)
-
-libfm_file_search_cli_demo_CFLAGS = \
-	$(GTK_CFLAGS) \
-	-Werror-implicit-function-declaration \
-	$(NULL)
-
-libfm_file_search_cli_demo_LDADD = \
-	$(GTK_LIBS) \
-	$(INTLLIBS) \
-	libfm.la \
-	libfm-gtk.la \
 	$(NULL)
 endif
 
