Fix build with --without-gtk.
a) changed main loop in file-search-cli-demo from GTK to GLib;
b) corrected CFLAGS for glib-compat.c compilation, automake uses GTK ones.

--- a/configure.ac
+++ b/configure.ac
@@ -110,7 +110,8 @@ if test x"$ac_with_gtk" != xno; then
   PKG_CHECK_MODULES(GTK, [$pkg_modules])
   LIBFM_PREF_APPS="libfm-pref-apps"
 else
-  GTK_CFLAGS=
+  dnl automake uses GTK_CFLAGS for glib-compat.c compilation
+  GTK_CFLAGS="${GIO_CFLAGS}"
   GTK_LIBS=
   LIBFM_GTK_LTLIBRARIES=
   ac_with_gtk="none"
