file_search_cli_demo_LDADD should include $(GIO_LIBS) due to g_type_init().

--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -23,4 +23,5 @@ fm_path_LDADD= \
 file_search_cli_demo_SOURCES = libfm-file-search-cli-demo.c
 file_search_cli_demo_LDADD = \
 	../libfm.la \
+	$(GIO_LIBS) \
 	$(NULL)
