Move FM_CHECK_VERSION macro into separated header file.
This will void dependency of libfm on libfm-extra so libfm can be
used without libfm-extra and vice versa.

--- a/configure.ac
+++ b/configure.ac
@@ -279,7 +279,7 @@ AC_CONFIG_FILES([
     src/Makefile
     src/actions/Makefile
     src/tests/Makefile
-    src/fm-extra.h
+    src/fm-version.h
     data/Makefile
     data/libfm-pref-apps.1
     data/ui/Makefile
