New APIs fm_file_ops_job_set_{display_name,icon,hidden,target}
Those APIs extend FM_FILE_OP_CHANGE_ATTR operation so FmFileOpsJob can
rename file, change its icon, "hidden" attribute, or target of shortcut.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -36,8 +36,10 @@ src/gtk/fm-side-pane.c
 src/gtk/fm-standard-view.c
 src/gtk/fm-tab-label.c
 src/job/fm-dir-list-job.c
+src/job/fm-file-ops-job.c
 src/job/fm-file-ops-job-delete.c
 src/job/fm-file-ops-job-xfer.c
+src/job/fm-file-ops-job-change-attr.c
 src/tools/libfm-pref-apps.c
 src/udisks/g-udisks-device.c
 src/vfs/fm-vfs-menu.c
