--- a/src/modules/Makefile.am
+++ b/src/modules/Makefile.am
@@ -31,6 +31,7 @@ endif
 
 if HAVE_ACTIONS
 pkglib_LTLIBRARIES += gtk-menu-actions.la
+LIBFMACTIONS = $(top_builddir)/src/actions/libfmactions.la
 endif
 
 # module-specific parameters
