--- a/src/modules/Makefile.am
+++ b/src/modules/Makefile.am
@@ -31,7 +31,6 @@ endif
 
 if HAVE_ACTIONS
 pkglib_LTLIBRARIES += gtk-menu-actions.la
-LIBFMACTIONS = $(top_builddir)/src/actions/libfmactions.la
 endif
 
 # module-specific parameters
@@ -39,8 +38,7 @@ vfs_menu_la_CFLAGS = $(MENU_CACHE_CFLAGS) -I../extra
 vfs_menu_la_LIBADD = $(MENU_CACHE_LIBS) $(top_builddir)/src/libfm-extra.la
 
 gtk_menu_actions_la_CFLAGS = -I../actions $(GTK_CFLAGS) -I../gtk
-gtk_menu_actions_la_LIBADD = $(LIBFMACTIONS) $(GTK_LIBS)
-gtk_menu_actions_la_DEPENDENCIES_EXTRA = $(LIBFMACTIONS)
+gtk_menu_actions_la_LIBADD = $(GTK_LIBS)
 
 gtk_menu_trash_la_CFLAGS = $(GTK_CFLAGS) -I../gtk
 gtk_menu_trash_la_LIBADD = $(GTK_LIBS)
