Update "xml-purge" sed to strip newlines and comments
The added complexity might not be worth the result though

Signed-off-by: Samuel Stirtzel <s.stirtzel@googlemail.com>

--- a/data/ui/Makefile.am
+++ b/data/ui/Makefile.am
@@ -21,4 +21,4 @@ EXTRA_DIST = \
 
 # Purge GtkBuilder UI files
 .glade.ui:
-	sed 's/^ *</</' < $< > $@
+	sed 's/<!--.*-->//' < $< | sed ':a;N;$$!ba;s/ *\n *</</g' > $@
