New module: gtk_file_prop:inode/x-shortcut, it supports Type=Link desktop files.
The icon, name, and hidden attributes are currently supported to edit.

--- a/src/modules/Makefile.am
+++ b/src/modules/Makefile.am
@@ -25,6 +25,7 @@ pkglib_LTLIBRARIES = \
 if ENABLE_GTK
 pkglib_LTLIBRARIES += \
 	gtk-fileprop-x-desktop.la \
+	gtk-fileprop-x-shortcut.la \
 	gtk-menu-trash.la \
 	$(NULL)
 endif
@@ -37,11 +38,14 @@ endif
 vfs_menu_la_CFLAGS = $(MENU_CACHE_CFLAGS) -I../extra
 vfs_menu_la_LIBADD = $(MENU_CACHE_LIBS) $(top_builddir)/src/libfm-extra.la
 
+gtk_fileprop_x_desktop_la_CFLAGS = $(GTK_CFLAGS) -I../gtk
+gtk_fileprop_x_desktop_la_LIBADD = $(GTK_LIBS)
+
+gtk_fileprop_x_shortcut_la_CFLAGS = $(GTK_CFLAGS) -I../gtk
+gtk_fileprop_x_shortcut_la_LIBADD = $(GTK_LIBS)
+
 gtk_menu_actions_la_CFLAGS = -I../actions $(GTK_CFLAGS) -I../gtk
 gtk_menu_actions_la_LIBADD = $(GTK_LIBS)
 
 gtk_menu_trash_la_CFLAGS = $(GTK_CFLAGS) -I../gtk
 gtk_menu_trash_la_LIBADD = $(GTK_LIBS)
-
-gtk_fileprop_x_desktop_la_CFLAGS = $(GTK_CFLAGS) -I../gtk
-gtk_fileprop_x_desktop_la_LIBADD = $(GTK_LIBS)
