--- a/configure.ac
+++ b/configure.ac
@@ -68,6 +68,7 @@ AC_HEADER_STDC
 # Checks for library functions.
 dnl AC_FUNC_MMAP
 AC_SEARCH_LIBS([pow], [m])
+AC_SEARCH_LIBS(dlopen, dl)
 
 # Large file support
 AC_ARG_ENABLE([largefile],
