--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -44,4 +44,5 @@ src/modules/vfs-search.c
 src/modules/gtk-fileprop-x-desktop.c
 src/modules/gtk-menu-trash.c
 src/tools/libfm-pref-apps.c
+src/tools/lxshortcut.c
 src/udisks/g-udisks-device.c
