--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ src/actions/*.[ch]
 src/fm-version.h
 src/libfm-demo
 src/libfm-pref-apps
+src/lxshortcut
 src/tests/file-search-cli-demo
 src/tests/fm-path
 src/vapi/fm-actions.vapi
