--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -14,6 +14,7 @@ src/base/fm-path.c
 src/base/fm-mime-type.c
 src/base/fm-templates.c
 src/base/fm-terminal.c
+src/base/fm-thumbnailer.c
 src/base/fm-utils.c
 src/extra/fm-xml-file.c
 src/gtk/fm-app-chooser-combo-box.c
