New class FmMenuToolItem - cut down GtkMenuToolButton without the button.
We want this as location history button in main window toolbar.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -149,6 +149,7 @@ libfm_gtk_SOURCES = \
 	gtk/fm-thumbnail.c \
 	gtk/fm-tab-label.c \
 	gtk/fm-path-bar.c \
+	gtk/fm-menu-tool-item.c \
 	gtk/fm-gtk-marshal.c \
 	$(NULL)
 
@@ -223,6 +224,7 @@ libfmgtkinclude_HEADERS = \
 	gtk/fm-tab-label.h \
 	gtk/fm-path-bar.h \
 	gtk/fm-sortable.h \
+	gtk/fm-menu-tool-item.h \
 	gtk/fm-gtk-marshal.h \
 	$(NULL)
 
