--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -29,6 +29,7 @@ src/gtk/fm-folder-model.c
 src/gtk/fm-folder-view.c
 src/gtk/fm-gtk-file-launcher.c
 src/gtk/fm-gtk-utils.c
+src/gtk/fm-menu-tool-item.c
 src/gtk/fm-path-entry.c
 src/gtk/fm-places-model.c
 src/gtk/fm-places-view.c
