Add correct comment to libfm-pref-apps.desktop file.
Some users misunderstand purpose of the libfm-pref-apps so adding a tooltip
will help those users to get an idea about its purpose (see LP #1064562).

--- a/data/libfm-pref-apps.desktop.in
+++ b/data/libfm-pref-apps.desktop.in
@@ -1,6 +1,7 @@
 [Desktop Entry]
 Type=Application
 _Name=Preferred Applications
+_Comment=Select applications called on click on Web page or e-mail address
 Icon=preferences-desktop
 Exec=libfm-pref-apps
 StartupNotify=true
