Add fallback icons "folder" and "unknown" for case if no theme can be reached.
See http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=734691 bugreport:
if there is no gnome icon theme but no theme was selected by user then GTK
cannot use any. Providing own last-resort icons will solve that problem.

Icons supplied are taken from lxde-icon-theme package - 48x48 sized ones.

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -26,12 +26,23 @@ libfmdatafiles_DATA = \
 	terminals.list \
 	$(NULL)
 
+libfmimagesdir = $(datadir)/libfm/images
+if ENABLE_GTK
+libfmimages_DATA = \
+	images/unknown.png \
+	images/folder.png \
+	$(NULL)
+else
+libfmimages_DATA =
+endif
+
 EXTRA_DIST= \
 	$(libfmconf_DATA) \
 	$(mime_DATA) \
 	$(libfmdatafiles_DATA) \
 	$(desktop_in_files) \
 	$(desktop_DATA) \
+	$(libfmimages_DATA) \
 	$(NULL)
 
 test:
