--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -2,7 +2,10 @@ NULL=
 
 SUBDIRS=ui
 
-man_MANS = libfm-pref-apps.1 lxshortcut.1
+man_files = libfm-pref-apps.1 lxshortcut.1
+if ENABLE_GTK
+man_MANS = $(man_files)
+endif
 
 mimedir = $(datadir)/mime/packages
 mime_DATA = libfm.xml
@@ -12,12 +15,15 @@ libfmconf_DATA = \
 	libfm.conf \
 	$(NULL)
 
-desktopdir=$(datadir)/applications
 desktop_in_files= \
 	libfm-pref-apps.desktop.in \
 	lxshortcut.desktop.in \
 	$(NULL)
-desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
+desktop_files = $(desktop_in_files:.desktop.in=.desktop)
+if ENABLE_GTK
+desktopdir=$(datadir)/applications
+desktop_DATA = $(desktop_files)
+endif
 @INTLTOOL_DESKTOP_RULE@
 
 libfmdatafilesdir = $(datadir)/libfm
@@ -26,23 +32,23 @@ libfmdatafiles_DATA = \
 	terminals.list \
 	$(NULL)
 
-libfmimagesdir = $(datadir)/libfm/images
-if ENABLE_GTK
-libfmimages_DATA = \
+libfmimages_files = \
 	images/unknown.png \
 	images/folder.png \
 	$(NULL)
-else
-libfmimages_DATA =
+if ENABLE_GTK
+libfmimagesdir = $(datadir)/libfm/images
+libfmimages_DATA = $(libfmimages_files)
 endif
 
-EXTRA_DIST= \
+EXTRA_DIST = \
 	$(libfmconf_DATA) \
+	$(man_files) \
 	$(mime_DATA) \
 	$(libfmdatafiles_DATA) \
 	$(desktop_in_files) \
-	$(desktop_DATA) \
-	$(libfmimages_DATA) \
+	$(desktop_files) \
+	$(libfmimages_files) \
 	$(NULL)
 
 test:
