Fix usage of POSIX.1-2001 declaration `environ' with GLib < 2.28.
The environ variable is included by POSIX.1-2001 but some OS
doesn't respect it and don't declare it in any header file.

--- a/configure.ac
+++ b/configure.ac
@@ -295,6 +295,9 @@ fi
 dnl Check linker flags for modules
 AC_CHECK_LDFLAG(ac_cv_ld_z_defs, [-Wl,-z,defs], LDFLAGS)
 
+dnl Check if OS respects POSIX.1-2001 `environ' declaration
+AC_CHECK_DECLS([environ], [], [], [[#include <unistd.h>]])
+
 dnl Fix invalid sysconfdir when --prefix=/usr
 if test `eval "echo $sysconfdir"` = /usr/etc
 then
