Add MATE to NotShowIn in desktop entries

--- a/data/libfm-pref-apps.desktop.in
+++ b/data/libfm-pref-apps.desktop.in
@@ -6,4 +6,4 @@ Icon=preferences-desktop
 Exec=libfm-pref-apps
 StartupNotify=true
 Categories=Settings;DesktopSettings;X-LXDE-Settings;GTK;
-NotShowIn=GNOME;XFCE;KDE;
+NotShowIn=GNOME;XFCE;KDE;MATE;
