Compile the --with-gtk=3 option with -Wno-deprecated-declarations
This is a GTK+ 2 application ported to GTK+ 3, not a native GTK+ 3
application. The deprecated GTK+ 3 features will most likely not be
removed and can still be used.

Add this compiler option so that only really important warnings are
issued.

--- a/configure.ac
+++ b/configure.ac
@@ -136,6 +136,9 @@ else
   ac_with_gtk="none"
   LIBFM_PREF_APPS=
 fi
+if test "$ac_with_gtk" = "3.0"; then
+  CFLAGS="$CFLAGS -Wno-deprecated-declarations"
+fi
 AC_SUBST(GTK_CFLAGS)
 AC_SUBST(GTK_LIBS)
 AC_SUBST(LIBFM_GTK_LTLIBRARIES)
