--- a/data/lxshortcut.desktop.in
+++ b/data/lxshortcut.desktop.in
@@ -3,7 +3,7 @@ Type=Application
 Icon=applications-other
 _Name=Shortcut Editor
 _Comment=Create new or change existing desktop entry
-Categories=Utility;GTK;
+Categories=GTK;Utility;
 Exec=lxshortcut -i %f
 StartupNotify=true
 Terminal=false
